# cels-clay

./: CMakeLists.txt
.planning/: API-DESIGN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-build-system-clay-initialization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-layout-system-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-render-bridge/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-ncurses-clay-renderer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-demo-app-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-module-modernization/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-entity-primitives/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-layout-system-rewrite/: 08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-ncurses-migration/: 09-01-PLAN.md  09-01-SUMMARY.md
.planning/phases/10-sdl3-renderer/: 10-01-PLAN.md  10-01-SUMMARY.md
.planning/phases/11-dual-renderer-example/: 11-01-PLAN.md  11-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/demo/: components.h  main.c  pages.h  theme.h
examples/minimal/: main_ncurses.c  main_sdl3.c  ui.h
include/cels-clay/: clay_engine.h  clay_layout.h  clay_ncurses_renderer.h  clay_primitives.h  clay_render.h  clay_sdl3_renderer.h
src/: clay_engine.c  clay_impl.c  clay_layout.c  clay_ncurses_renderer.c  clay_primitives.c  clay_render.c  clay_sdl3_renderer.c
